[tool.poetry]
name = "data-structure"
version = "0.1.0"
description = "All code I've produced during the reading of Data Structure and Algorithm Thinking with Python"
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_structure"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
