[tool.poetry]
name = "data-structure"
version = "0.1.0"
description = "All code I've produced during the reading of Data Structure and Algorithm Thinking with Python"
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_structure"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.0.4"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
flake8 = "^6.0.0"
black = "^23.1.0"
pytest = "^7.2.1"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
